# MIRAGE

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  makefile
.cache/clangd/index/: aabb2d.h.8D085037041CEDF6.idx  aabb2d.h.B873D5E9D6D0A208.idx  affine-mat.h.C97E947E24CA6AD9.idx  affine-post.h.BCD559C56D9A7459.idx  affine-pre.h.46CAA1525A15777B.idx  affine.c.9BF6660CACE6A0CD.idx  affine.h.0517DF3CEDDD322A.idx  affine.h.0C8F092D6EF72EAB.idx  affine.h.2E34E84B3198B11E.idx  affine.h.B43E0AD16F0B18F6.idx  affine2d.c.E04C4EABC9EFF517.idx  affine2d.h.0C968668A1C6D798.idx  affine2d.h.E4E5FF172975A23F.idx  bezier.c.CFFF51A29CC69723.idx  bezier.h.4AB896FE4CAF15A9.idx  bezier.h.955F74AED23FE198.idx  box.c.0C3D191321208AE2.idx  box.h.53352D4ADD525C26.idx  box.h.F901E4B2E4664B31.idx  call.h.512D649F328C03FA.idx  cam.c.A3263925899B4D8B.idx  cam.h.0BB1DDC7B3AA3B4C.idx  cam.h.3265D2C0CEBF70F2.idx  cglm.h.5AD260A47C74519D.idx  color.h.DEB92D674AA8A285.idx  colors.h.FDC289A060EFF38D.idx  common.h.89E93D9C8EDDB9EE.idx  curve.c.3AE6F3C9ACEF14E9.idx  curve.h.5846CA9B942A95D9.idx  curve.h.D22062E80CA7FDA2.idx  ease.c.62859F5BC0B6CFFC.idx  ease.h.AB0C10C74099310F.idx  ease.h.D3A0DD033AA2DF2D.idx  euler.c.6879A9283F74A397.idx  euler.h.7BC3380E4AD89A32.idx  euler.h.FDEB9EFC916A56C2.idx  euler_to_quat_rh.h.4896152021070353.idx  frustum.c.758BD369CC92EFD1.idx  frustum.h.C2CCF84F617D02C7.idx  frustum.h.CD33D476F4713E43.idx  (+132 more)
lib/GLAD/: glad.h
lib/internal/camera/: camera.h
lib/internal/ecglm/: matrix.h
lib/internal/emath/: emath.h
lib/internal/engine/: engine.h
lib/internal/files/wad/: wad.h
lib/internal/gl_helpers/: gl_helpers.c  gl_helpers.h
lib/internal/map/: map.h
lib/internal/opengl/: colors.h  mesh.h  renderer.h  shaders.h
lib/internal/renderer/: renderer.c  renderer.h
lib/internal/sdl/: input.h  window.h
lib/internal/types/: matrix.c  matrix.h  types.h  vector.h
scripts/: build.sh  clean.sh  run.sh  sanatizecheck.sh
src/: main.c
(+11 files in other folders)
